Add .DS_Store to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -114,4 +114,4 @@ fabric.properties
 # https://plugins.jetbrains.com/plugin/12206-codestream
 .idea/codestream.xml
 
-# End of https://www.toptal.com/developers/gitignore/api/pycharm
+# End of https://www.toptal.com/developers/gitignore/api/pycharm.DS_Store
